# django-package-template

./: .travis.yml  CONTRIBUTING.md  README.md  cookiecutter.json
docs/: Makefile  conf.py  index.rst
hooks/: post_gen_project.sh
{{cookiecutter.project_slug}}/: .editorconfig  .travis.yml  CONTRIBUTING.md  README.md  setup.cfg  setup.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/testapp/: settings.py
{{cookiecutter.project_slug}}/tests/testapp/testapp/: settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
