[metadata]
name = {{cookiecutter.project_slug}}
license = Apache-2
classifier =
    License :: OSI Approved :: MIT License

test_require =
     pytest

[tool:pytest]
addopts = --tb=short -rxs --strict
DJANGO_SETTINGS_MODULE=tests.testapp.settings

[pydocstyle]
match_dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py

[flake8]
max-line-length = 99
