[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.package_description }}
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Thermondo GmbH
author-email = opensource@thermondo.de
license = Apache-2
home-page = https://github.com/Thermondo/{{ cookiecutter.project_slug }}
project_urls =
    Bug Tracker = https://github.com/Thermondo/{{ cookiecutter.project_slug }}/issues
    Documentation = https://github.com/Thermondo/{{ cookiecutter.project_slug }}
    Source Code = https://github.com/Thermondo/{{ cookiecutter.project_slug }}
# Find more classifiers here:
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Framework :: Django
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
keywords =
    django

tests_require =
    pytest
    pytest-django

[files]
packages =
    {{ cookiecutter.project_slug }}

[aliases]
test = pytest

[pbr]
skip_authors = true
skip_changelog = true

[tool:pytest]
addopts = --tb=short -rxs --strict
DJANGO_SETTINGS_MODULE = tests.testapp.settings

[pydocstyle]
match_dir = (?!tests|env|docs|\.).*
match = (?!setup).*.py

[flake8]
max-line-length = 99
